// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/BasicTag render diff color tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 2`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 3`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 4`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 5`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 6`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-14u7uuj css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 7`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-14u7uuj css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 8`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-14u7uuj css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-default-tag-wrapper css-7o2rh7 css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 9`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-14u7uuj css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-default-tag-wrapper css-7o2rh7 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-purple basic-tag-wrapper basic-default-tag-wrapper css-14wtqlt css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 10`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-14u7uuj css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-default-tag-wrapper css-7o2rh7 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-purple basic-tag-wrapper basic-default-tag-wrapper css-14wtqlt css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-1fujbki css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 11`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-14u7uuj css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-default-tag-wrapper css-7o2rh7 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-purple basic-tag-wrapper basic-default-tag-wrapper css-14wtqlt css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-1fujbki css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-vclwph css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff color tag 12`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-default-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-orange basic-tag-wrapper basic-default-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-default-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-cyan basic-tag-wrapper basic-default-tag-wrapper css-14u7uuj css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-default-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-default-tag-wrapper css-7o2rh7 css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-purple basic-tag-wrapper basic-default-tag-wrapper css-14wtqlt css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-1fujbki css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-vclwph css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-default-tag-wrapper css-194rg1q css-dev-only-do-not-override-txh9fw"
      style="background-color: gray;"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff size tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-large-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff size tag 2`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-large-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;

exports[`lib/BasicTag render diff size tag 3`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-large-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
  <div>
    <span
      class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1q0j97r css-dev-only-do-not-override-txh9fw"
    />
  </div>
</body>
`;
